--- a/nav/index.html
+++ b/nav/index.html
@@ -95,6 +95,7 @@
 <h2 id="-我的">🌞 <em>我的</em></h2>
 <ul>
 <li><a href="https://atopos-x.github.io/">Atopos</a></li>
+<li><a href="edge://favorites/?id=1">标签页</a></li>
 </ul>
 <h2 id="-工具">🔨 <em>工具</em></h2>
 <ul>
@@ -107,7 +108,7 @@
 <li><a href="https://www.runoob.com/">菜鸟教程</a></li>
 <li><a href="https://c.biancheng.net/index.html">C语言中文网</a></li>
 <li><a href="https://zh.javascript.info/">现代 JavaScript 教程</a></li>
-<li><a href="https://liaoxuefeng.com/books/java/introduction/">Java教程 - 廖雪峰的官方网站</a></li>
+<li><a href="https://liaoxuefeng.com/books/java/introduction/">Java教程 - 廖雪峰官方</a></li>
 <li><a href="https://www.educoder.net/shixuns?id=152&amp;type=tag&amp;palce=2">实践项目</a></li>
 <li><a href="https://www.icourse163.org/">中国大学MOOC</a></li>
 <li><a href="https://leetcode.cn/">力扣 (LeetCode)</a></li>
@@ -117,13 +118,11 @@
 </ul>
 <h2 id="-博客">🍺 <em>博客</em></h2>
 <ul>
-<li><a href="/">docitem one</a></li>
 <li><a href="https://aituyaa.com/">爱涂鸦啊</a></li>
 <li><a href="https://loveminimal.github.io/">Virgo</a></li>
 </ul>
 <h2 id="-休闲">☕️ <em>休闲</em></h2>
 <ul>
-<li><a href="/">docitem one</a></li>
 <li><a href="https://zhuanlan.zhihu.com/p/39645975">KeePass全网最详</a></li>
 <li><a href="https://www.iplaysoft.com/cloudreve.html">Cloudreve搭建私人网盘</a></li>
 <li><a href="https://www.dp712.com/">DP次元星球</a></li>
@@ -148,6 +147,8 @@
 <li><a href="https://www.cnblogs.com/kjcy8/articles/16648814.html">免费图床，看这一篇就够了！ - kjcy8 - 博客园 (cnblogs.com)</a></li>
 <li><a href="https://vercel.com/">Vercel: Build and deploy the best web experiences with the Frontend Cloud</a></li>
 <li><a href="https://answers.microsoft.com/zh-hans/windows/forum/all/win10-%E5%A6%82%E4%BD%95%E5%88%A0%E9%99%A4/803b1267-bda3-4ec3-bcda-71f85373ec14">win10 如何删除 右键 打开方式 中多余的程序选项?(不删除程序) - Microsoft Community</a></li>
+<li><a href="https://yesicon.app/">Yesicon - 精选全球高品质、开源、免费的矢量图标库</a></li>
+<li><a href="https://www.namesilo.com/">Cheap Domain Names &amp; Web Hosting Starting at $0.99! | NameSilo</a></li>
 </ul>
 </div>
     </div>
