--- a/about/index.html
+++ b/about/index.html
@@ -81,7 +81,7 @@
     </div>
 
     <div class='content  content '>
-        <div class="nav">
+        <div class="about">
 <p>关于我的信息：</p>
 <p>我是来自中国，是一名Java程序员</p>
 
