--- a/about/index.html
+++ b/about/index.html
@@ -82,8 +82,7 @@
 
     <div class='content  content '>
         <div class="about">
-<p>关于我的信息：</p>
-<p>我是来自中国，是一名Java程序员</p>
+<p>记录一些觉得有必要记录的东西和一些关于开发相关的东西</p>
 
     </div>
 
