--- a/nav/index.html
+++ b/nav/index.html
@@ -95,7 +95,7 @@
 <h2 id="-我的">🌞 <em>我的</em></h2>
 <ul>
 <li><a href="https://atopos-x.github.io/">Atopos</a></li>
-<li><a href="edge://favorites/?id=1">标签页</a></li>
+<li><a href="http://atopos.lovestoblog.com/">Java学习笔记</a></li>
 </ul>
 <h2 id="-工具">🔨 <em>工具</em></h2>
 <ul>
