--- a/nav/index.html
+++ b/nav/index.html
@@ -102,6 +102,7 @@
 <li><a href="https://www.revouninstaller.com/start-freeware-download/">Revo Uninstaller</a></li>
 <li><a href="https://www.voidtools.com/zh-cn/">Everything</a></li>
 <li><a href="https://www.snipaste.com/">Snipaste</a></li>
+<li><a href="https://iqdb.org/">多业务镜像搜索</a></li>
 </ul>
 <h2 id="-文档">📑 <em>文档</em></h2>
 <ul>
@@ -120,6 +121,7 @@
 <ul>
 <li><a href="https://aituyaa.com/">爱涂鸦啊</a></li>
 <li><a href="https://loveminimal.github.io/">Virgo</a></li>
+<li><a href="https://shoka.lostyu.me/webstack/">Yume Shoka</a></li>
 </ul>
 <h2 id="-休闲">☕️ <em>休闲</em></h2>
 <ul>
