--- a/about/index.html
+++ b/about/index.html
@@ -82,7 +82,30 @@
 
     <div class='content  content '>
         <div class="about">
-<p>记录一些觉得有必要记录的东西和一些关于开发相关的东西</p>
+<p>记录一些觉得有必要记录的东西和一些关于开发相关的东西
+喜欢的颜色</p>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">浓度</th>
+<th style="text-align:left">颜色值</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">38%</td>
+<td style="text-align:left"><strong>#00c4b6</strong></td>
+</tr>
+<tr>
+<td style="text-align:left">40%</td>
+<td style="text-align:left">#00ccbd</td>
+</tr>
+<tr>
+<td style="text-align:left">45%</td>
+<td style="text-align:left">#00e6d4</td>
+</tr>
+</tbody>
+</table>
 
     </div>
 
