--- a/nav/index.html
+++ b/nav/index.html
@@ -123,6 +123,7 @@
 <li><a href="https://loveminimal.github.io/">Virgo</a></li>
 <li><a href="https://shoka.lostyu.me/webstack/">Yume Shoka</a></li>
 <li><a href="https://www.zzzwb.com/">Wenbin&rsquo;s blog</a></li>
+<li><a href="https://saika.us.kg/">Saika&rsquo;s Blog</a></li>
 </ul>
 <h2 id="-休闲">☕️ <em>休闲</em></h2>
 <ul>
