--- a/about/index.html
+++ b/about/index.html
@@ -94,7 +94,7 @@
 <tbody>
 <tr>
 <td style="text-align:left">38%</td>
-<td style="text-align:left"><strong>#00c4b6</strong></td>
+<td style="text-align:left">#00c4b6</td>
 </tr>
 <tr>
 <td style="text-align:left">40%</td>
