--- a/nav/index.html
+++ b/nav/index.html
@@ -128,9 +128,9 @@
 <h2 id="-休闲">☕️ <em>休闲</em></h2>
 <ul>
 <li><a href="https://zhuanlan.zhihu.com/p/39645975">KeePass全网最详</a></li>
-<li><a href="https://www.iplaysoft.com/cloudreve.html">Cloudreve搭建私人网盘</a></li>
 <li><a href="https://www.dp712.com/">DP次元星球</a></li>
 <li><a href="https://axutongxue.com/">阿虚同学的储物间</a></li>
+<li><a href="https://github.com/netlify">Netlify</a></li>
 </ul>
 <h2 id="-友链">🧲 <em>友链</em></h2>
 <ul>
@@ -154,6 +154,12 @@
 <li><a href="https://icons8.com/">Free Icons, Clipart Illustrations, Photos, and Music</a></li>
 <li><a href="https://freeicons.io/">Free Icons | Premium Icons | Latest Icons| Popular Icons</a></li>
 <li><a href="https://www.svgrepo.com/">SVG Repo - Free SVG Vectors and Icons</a></li>
+<li><a href="https://www.freepik.com/">Freepik | Create great designs, faster</a></li>
+<li><a href="https://www.pngsucai.com/">PNG素材网-免费高清透明PNG素材资源分享网站_PNG图片素材下载 PngSucai.Com</a></li>
+<li><a href="https://www.reshot.com/">Reshot | Free icons &amp; illustrations</a></li>
+<li><a href="https://3dicons.co/">3dicons - 开源 3D 图标库</a></li>
+<li><a href="https://www.cleanpng.com/">CleanPNG - 高清 png 图像和插图。免费下载无限。- CleanPNG / KissPNG</a></li>
+<li><a href="https://svgsilh.com/">Free SVG Image &amp; Icon. | SVG Silh</a></li>
 <li><a href="https://www.cnblogs.com/kjcy8/articles/16648814.html">免费图床，看这一篇就够了！ - kjcy8 - 博客园 (cnblogs.com)</a></li>
 <li>邮箱</li>
 <li><a href="https://22.do/zh">Google临时邮箱,一次性邮箱,10分钟邮箱,24小时邮箱,临时邮箱专业服务 - 22.Do</a></li>
