--- a/about/index.html
+++ b/about/index.html
@@ -106,6 +106,13 @@
 </tr>
 </tbody>
 </table>
+<p>想制作一个类似的标签页<br>
+<img src="../posts/assets/Pasted%20image%2020241122214431.png" alt=""></p>
+<p>或者类似哔哩哔哩我的追番页面也行，感觉跟书架一样</p>
+<p>或者<br>
+<img src="../posts/assets/Pasted%20image%2020241122220237.png" alt="">
+<img src="../posts/assets/Pasted%20image%2020241122220347.png" alt="">
+跟一个标签一样，但是各有各优点和缺点，但又不想太花里胡哨。哎😮‍💨</p>
 
     </div>
 
