--- a/nav/index.html
+++ b/nav/index.html
@@ -105,6 +105,7 @@
 <li><a href="https://www.snipaste.com/">Snipaste</a></li>
 <li><a href="https://iqdb.org/">多业务镜像搜索</a></li>
 <li><a href="https://sourceforge.net/projects/nikkhokkho/">压缩</a></li>
+<li><a href="https://svgl.app/">SVG</a></li>
 </ul>
 <h2 id="-文档">📑 <em>文档</em></h2>
 <ul>
@@ -118,6 +119,7 @@
 <li><a href="http://www.demodashi.com/">Demo大师 - 技术</a></li>
 <li><a href="https://www.nowcoder.com/">牛客网</a></li>
 <li><a href="https://javabetter.cn/">二哥的Java进阶之路</a></li>
+<li><a href="http://road.ftqq.com/">方糖全栈路线图</a></li>
 </ul>
 <h2 id="-博客">🍺 <em>博客</em></h2>
 <ul>
