--- a/nav/index.html
+++ b/nav/index.html
@@ -106,6 +106,7 @@
 <li><a href="https://iqdb.org/">多业务镜像搜索</a></li>
 <li><a href="https://sourceforge.net/projects/nikkhokkho/">压缩</a></li>
 <li><a href="https://svgl.app/">SVG</a></li>
+<li><a href="https://tool.lu/crontab">在线工具</a></li>
 </ul>
 <h2 id="-文档">📑 <em>文档</em></h2>
 <ul>
@@ -129,6 +130,7 @@
 <li><a href="https://www.zzzwb.com/">Wenbin&rsquo;s blog</a></li>
 <li><a href="https://saika.us.kg/">Saika&rsquo;s Blog</a></li>
 <li><a href="https://zhpengfei.com/cloudflare-worker-proxy-google-translate/#aioseo-api">zhpengfei</a></li>
+<li><a href="https://am.809098.xyz/serv00-huggingface-qinglong/">青龙</a></li>
 </ul>
 <h2 id="-休闲">☕️ <em>休闲</em></h2>
 <ul>
