--- a/nav/index.html
+++ b/nav/index.html
@@ -102,6 +102,7 @@
 <ul>
 <li><a href="https://www.revouninstaller.com/start-freeware-download/">Revo Uninstaller</a></li>
 <li><a href="https://www.voidtools.com/zh-cn/">Everything</a></li>
+<li><a href="https://github.com/QL-Win/QuickLook">QuickLook</a></li>
 <li><a href="https://www.snipaste.com/">Snipaste</a></li>
 <li><a href="https://iqdb.org/">多业务镜像搜索</a></li>
 <li><a href="https://sourceforge.net/projects/nikkhokkho/">压缩</a></li>
