--- a/wiki/index.html
+++ b/wiki/index.html
@@ -175,8 +175,8 @@
 <h3 id="自动获得ssl证书">自动获得SSL证书</h3>
 <p><a href="https://letsencrypt.org/">让我们加密</a></p>
 <h3 id="服务监控">服务监控</h3>
-<p><a href="https://uptimerobot.com/">UptimeRobot: Free Website Monitoring Service</a>
-<a href="https://console.cron-job.org/login">cron-job.org Console</a>
+<p><a href="https://uptimerobot.com/">UptimeRobot: Free Website Monitoring Service</a><br>
+<a href="https://console.cron-job.org/login">cron-job.org Console</a><br>
 <a href="https://github.com/louislam/uptime-kuma">louislam/uptime-kuma: A fancy self-hosted monitoring tool</a></p>
 <h3 id="服务器">服务器</h3>
 <p>有免费的托管网站服务，还有$0.25一个月的无限空间+无限流量
@@ -190,7 +190,7 @@
 <h3 id="图床">图床</h3>
 <p><a href="https://github.com/chevereto/chevereto">Releases · chevereto/chevereto</a></p>
 <h3 id="好玩的">好玩的</h3>
-<p><a href="https://anwen-anyi.github.io/collect/web.html">Internet | 安安稳稳</a>
+<p><a href="https://anwen-anyi.github.io/collect/web.html">Internet | 安安稳稳</a><br>
 <a href="https://busuanzi.ibruce.info/">不蒜子 - 极简网页计数器</a></p>
 <h2 id="浏览器美化插件">浏览器美化插件</h2>
 <blockquote>
