--- a/about/index.html
+++ b/about/index.html
@@ -112,7 +112,7 @@
 <p>或者<br>
 <img src="../posts/assets/Pasted%20image%2020241122220237.png" alt="">
 <img src="../posts/assets/Pasted%20image%2020241122220347.png" alt="">
-跟一个标签一样，但是各有各优点和缺点，但又不想太花里胡哨。哎😮‍💨</p>
+跟一个标签一样，但是各有各优点和缺点，但又不想太花里胡哨。哎😮‍💨麻烦</p>
 
     </div>
 
